[gd_scene load_steps=4 format=3 uid="uid://dn5vkn2f1wvs7"]

[ext_resource type="Script" path="res://UI/Scripts/MainMenu.gd" id="1_diild"]
[ext_resource type="Texture2D" uid="uid://dxtny3g3ks0k8" path="res://icon.svg" id="1_yls6m"]
[ext_resource type="Theme" uid="uid://duqa7trn1b3y2" path="res://UI/Themes/Funny/FunnyButton.tres" id="2_lqph4"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_diild")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yls6m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -112.0
offset_right = 162.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_lqph4")
keep_pressed_outside = true
text = "New Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_lqph4")
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_lqph4")
text = "Exit Game"
